Page MenuHome GnuPG

Kleopatra: File operation resultlistwidget accessibility (contrast)
Testing, NormalPublic

Description

I think it is better to check this in one task instead of different tasks for encrypt and decrypt / verify

Edit 2025-07-22:

This ticket is now dedicated to the improvement of the contrast of the result windows in kf5, as T6869 (which has further improvements) can not be backported.

For this task:

  • remove the blue background color so that the text is always black on white for "neutral" results (Test: check encryption and decryption results)
  • for the negative results keep the light red background, but with a black font (instead of dark red). (Test: Check in the notepad with sign only)

Event Timeline

aheinecke created this task.

At the moment we have a green background for the results of a decryption and/or verification, if it was successful.
This does not work with high contrast mode.

And in case of GnuPG VSD a compliant signature looks the same as a not compliant one if you only go by the color and do not read the text.

Should you decide on only a colored icon / bar / whatever please keep in mind that a different color/shade for "valid but not VS-NfD compliant" would be good.

In high contrast mode the background should always be white or black.

Because color is a bad status indicator with regard to accessibility, we should think about using an icon as status indicator (additionally to color).

ikloecker changed the task status from Open to Testing.EditedJun 20 2024, 2:09 PM
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

The problems with colors in high contrast mode were addressed with T6073: Kleopatra: Fix issues with high contrast resp. inverted color scheme. I'm not sure what's left to do. Setting to Testing for getting feedback what's missing.

Note that there is the idea to improve/rework the result overview: T6869: Kleopatra: Improve verification results messages (esp. for invalid signature and multiple signatures)

ebo renamed this task from Kleopatra: File operation resultlistwidget accessibility to Kleopatra: File operation resultlistwidget accessibility (contrast).Jul 22 2025, 4:22 PM
ebo changed the task status from Testing to Open.
ebo updated the task description. (Show Details)
ebo edited projects, added vsd34; removed Restricted Project.
ikloecker changed the task status from Open to Testing.Jul 23 2025, 9:49 AM
ikloecker moved this task from Backlog to WIP on the vsd34 board.

Done.

ikloecker mentioned this in Unknown Object (Maniphest Task).Jul 28 2025, 9:59 AM
ikloecker mentioned this in Unknown Object (Maniphest Task).Jul 28 2025, 3:52 PM
ikloecker added a parent task: Unknown Object (Maniphest Task).Jul 29 2025, 10:19 AM