Use normal background color instead of light blue for encryption result

This is a minimal backport of changes made for the next major release.

GnuPG-bug-id: 5846